--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -781,7 +781,9 @@
     "add_location_at_marker": "Ajouter un nouvel emplacement chez Marker",
     "location_map": "Carte de localisation",
     "locations_shown": "Emplacements montrés",
-    "place_marker_desc_location": "Cliquez sur la carte pour placer un marqueur."
+    "place_marker_desc_location": "Cliquez sur la carte pour placer un marqueur.",
+    "show_activities": "Montrer les activités",
+    "show_visited_cities": "Villes visites"
   },
   "languages": {},
   "share": {
