--- a/frontend/src/locales/no.json
+++ b/frontend/src/locales/no.json
@@ -798,7 +798,9 @@
     "add_location_at_marker": "Legg til nytt sted på markør",
     "location_map": "Stedskart",
     "locations_shown": "steder vist",
-    "place_marker_desc_location": "Klikk på kartet for å plassere en markør."
+    "place_marker_desc_location": "Klikk på kartet for å plassere en markør.",
+    "show_activities": "Vis aktiviteter",
+    "show_visited_cities": "Besøkte byer"
   },
   "share": {
     "shared": "Delt",
