--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -798,7 +798,9 @@
     "add_location_at_marker": "Добавить новое место в маркере",
     "location_map": "Карта местоположения",
     "locations_shown": "Места показаны",
-    "place_marker_desc_location": "Нажмите на карту, чтобы разместить маркер."
+    "place_marker_desc_location": "Нажмите на карту, чтобы разместить маркер.",
+    "show_activities": "Показать деятельность",
+    "show_visited_cities": "Посещены города"
   },
   "share": {
     "shared": "Поделено",
